<resources>
    <string name="app_name">BringCloser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_delete_account">Delete account</string>
    <string name="connected_people_fragment_title">Connections</string>
    <string name="request_to_people_fragment_title">Sent requests</string>
    <string name="request_from_people_fragment_title">Received requests</string>
    <string name="connection_detail_chat_fragment_title">Chat</string>
    <string name="connection_detail_wish_fragment_title">Wish</string>
    <string name="connection_detail_event_fragment_title">Scheduled event</string>
    <string name="connection_detail_thought_fragment_title">Private thought</string>
    <string name="welcome_start">Hi,</string>
    <string name="nav_received_items">Received Memories</string>
    <string name="nav_profile_settings">Profile Settings</string>
    <string name="nav_about">About App</string>
    <string name="nav_birthday_base">Birthday</string>
    <string name="nav_gender_base">Gender</string>
    <string name="no_internet_message">You are currently offline!
        Please, check your network connection, and try again.</string>
    <string name="no_internet_message_general">You are currently offline!
        Please, note that the changes will be synced when you will be online again!</string>
    <string name="retry">RETRY</string>
    <string name="zero_character_name_message">It is not recommended to leave it empty!</string>
    <string name="wrong_date_selected_message_before">Selected day should be before today!</string>
    <string name="wrong_date_selected_message_after">Selected day should be today or after!</string>
    <string name="uploading_image">Uploading your image&#8230;</string>
    <string name="uploaded_image">Your image has been uploaded!</string>
    <string name="settings_display_name_header">Displayed name</string>
    <string name="settings_birthday_header">Birthday</string>
    <string name="settings_gender_header">Gender</string>
    <string name="settings_verification_header">Email verification</string>
    <string name="settings_activity">Profile settings</string>
    <string name="about_activity">About BringCloser</string>
    <string name="received_details_activity_label">Your received memories</string>
    <string name="received_details_widget_label">Received memories</string>
    <string name="add_new_connection_activity">Search for a new connection</string>
    <string name="add_chosen_connection_activity">Add the chosen connection</string>
    <string name="settings_birthday_set_default">Set default</string>
    <string name="dialog_settings_name">Type the desired name</string>
    <string name="dialog_title">Type the desired message</string>
    <string name="dialog_wish_withdraw_title">You\'re about to withdraw the following wish!</string>
    <string name="dialog_event_withdraw_title">You\'re about to withdraw the following event notification!</string>
    <string name="dialog_thought_withdraw_title">You\'re about to delete the following thought!</string>
    <string name="dialog_thought_send_title">You\'re about to send the following thought!</string>
    <string name="dialog_settings_positive_btn">OK</string>
    <string name="dialog_settings_negative_btn">CANCEL</string>
    <string name="dialog_settings_back_btn">BACK</string>
    <string name="settings_change_btn">CHANGE</string>
    <string name="settings_verification_btn">VERIFY</string>
    <string name="settings_verification_positive">Verified</string>
    <string name="settings_verification_negative">Not verified</string>
    <string name="settings_verification_ongoing">Checking mail box, verifying, reopen app or click to \"RETRY\"</string>
    <string name="nav_drawer_verification_required">Email verification required!</string>
    <string name="starting_toolbar_title">Loading&#8230;</string>
    <string name="no_suitable_app_message">Your phone has no app to perform the request!</string>
    <string name="permission_needed">The following permissions are necessary to continue&#8230;</string>
    <string name="permission_needed_message">Read and write external storage permissions are needed!</string>
    <string name="denied_permission_message">You cannot continue without granting permissions!</string>
    <string name="re_authenticate_request">Please, re-authenticate, and then
        try again to complete the deletion of account.</string>
    <string name="delete_account_dialog_title">You\'re about to delete your account!</string>
    <string name="delete_account_dialog_alert_start">Before deleting</string>
    <string name="delete_account_dialog_alert_part_1">\n
        \u2022 Make sure that you have recently logged in</string>
    <string name="delete_account_dialog_alert_part_2">
        -> Otherwise, your request cannot be fully performed</string>
    <string name="delete_account_dialog_alert_part_3">\n
        \u2022 To be sure, re-authenticate to the app\n
        \u2022 Come back here if you still want to delete</string>
    <string name="delete_account_dialog_data_info_start">\nIf done, the followings will be deleted</string>
    <string name="delete_account_dialog_data_info">\n
        \u2022 All of your info (profile and connections)\n
        \u2022 All of your images\n
        \u2022 Your authorization to enter BringCloser app</string>
    <string name="settings_verification_dialog_title">Email verification request</string>
    <string name="settings_verification_dialog_info">\n
        1. Click \"OK\" to have the request sent to you\n
        2. Check your mail box and click on verifying\n
        3. Reopen the app or click to \"RETRY\"\n
        4. Have fun with your close ones 😉</string>
    <string name="filter_hint">Type to filter the list below&#8230;</string>
    <string name="add_connection_possible_size">Possible connections</string>
    <string name="add_connection_found_possible_size">Found possible connections</string>
    <string name="add_connection_no_available">
        No available new connections!\nLet others know the BringCloser app!</string>
    <string name="add_connection_chosen_question_part1">Who is</string>
    <string name="add_connection_chosen_question_part2">to you mostly?</string>
    <string name="settings_birthday_default">Data not provided</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_none">I do not want to specify</string>
    <string name="relationship_type_lover">Love</string>
    <string name="relationship_type_friend">Friend</string>
    <string name="relationship_type_sibling">Sibling</string>
    <string name="relationship_type_cousin">Cousin</string>
    <string name="relationship_type_parent">Parent</string>
    <string name="relationship_type_child">Child</string>
    <string name="relationship_type_grandparent">Grandparent</string>
    <string name="relationship_type_godchild">Godchild</string>
    <string name="relationship_type_godparent">Godparent</string>
    <string name="relationship_type_grandchild">Grandchild</string>
    <string name="relationship_type_uncle">Uncle</string>
    <string name="relationship_type_aunt">Aunt</string>
    <string name="relationship_type_nephew">Nephew</string>
    <string name="relationship_type_niece">Niece</string>
    <string name="relationship_type_other">Other</string>
    <string name="wish_birthday_occasion">Birthday</string>
    <string name="wish_name_day_occasion">Name Day</string>
    <string name="wish_christmas_occasion">Christmas Eve</string>
    <string name="wish_new_year_occasion">New Year</string>
    <string name="wish_easter_occasion">Easter</string>
    <string name="wish_valentine_day_occasion">Valentine\'s Day</string>
    <string name="wish_anniversary_occasion">Anniversary</string>
    <string name="wish_women_day_occasion">Women\'s Day</string>
    <string name="wish_mother_day_occasion">Mother\'s Day</string>
    <string name="wish_father_day_occasion">Father\'s Day</string>
    <string name="settings_birthday_default_id">s01</string>
    <string name="gender_male_id">g01</string>
    <string name="gender_female_id">g02</string>
    <string name="gender_none_id">g03</string>
    <string name="relationship_type_lover_id">r01</string>
    <string name="relationship_type_friend_id">r02</string>
    <string name="relationship_type_sibling_id">r03</string>
    <string name="relationship_type_cousin_id">r04</string>
    <string name="relationship_type_parent_id">r05</string>
    <string name="relationship_type_child_id">r06</string>
    <string name="relationship_type_grandparent_id">r07</string>
    <string name="relationship_type_godchild_id">r08</string>
    <string name="relationship_type_godparent_id">r09</string>
    <string name="relationship_type_grandchild_id">r10</string>
    <string name="relationship_type_uncle_id">r11</string>
    <string name="relationship_type_aunt_id">r12</string>
    <string name="relationship_type_nephew_id">r13</string>
    <string name="relationship_type_niece_id">r14</string>
    <string name="relationship_type_other_id">r15</string>
    <string name="wish_birthday_occasion_id">w01</string>
    <string name="wish_name_day_occasion_id">w02</string>
    <string name="wish_christmas_occasion_id">w03</string>
    <string name="wish_new_year_occasion_id">w04</string>
    <string name="wish_easter_occasion_id">w05</string>
    <string name="wish_valentine_day_occasion_id">w06</string>
    <string name="wish_anniversary_occasion_id">w07</string>
    <string name="wish_women_day_occasion_id">w08</string>
    <string name="wish_mother_day_occasion_id">w09</string>
    <string name="wish_father_day_occasion_id">w10</string>
    <string name="relationship_type_none">Data not provided</string>
    <string name="relationship_type_sibling_male">Brother</string>
    <string name="relationship_type_sibling_female">Sister</string>
    <string name="relationship_type_parent_male">Father</string>
    <string name="relationship_type_parent_female">Mother</string>
    <string name="relationship_type_child_male">Son</string>
    <string name="relationship_type_child_female">Daughter</string>
    <string name="relationship_type_grandparent_male">Grandpa</string>
    <string name="relationship_type_grandparent_female">Grandma</string>
    <string name="relationship_type_godchild_male">Godson</string>
    <string name="relationship_type_godchild_female">Goddaughter</string>
    <string name="sorted_by_default">Time - Ascending</string>
    <string name="wish_no_data">You have not sent any wishes, yet!</string>
    <string name="sorted_by">Sorted by</string>
    <string name="received_detail_wish">Wish</string>
    <string name="received_detail_event">Event</string>
    <string name="received_detail_thought">Thought</string>
    <string name="received_details_no_selection_alert">
        Please, select at least one out of the three options above!</string>
    <string name="received_details_no_result_alert">
        There are no memories found!</string>
    <string name="empty_view_text">You have no received memories, yet!\n
        Let others know the BringCloser app!</string>
    <string name="settings_photo_content_description">Profile Settings Photo</string>
    <string name="widget_logo_content_description">Widget Logo</string>
    <string name="fab_content_description_gallery">Open Gallery Button</string>
    <string name="fab_content_description_camera">Open Camera Button</string>
    <string name="nav_terms_of_use">Terms of Use</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_documents">Documents</string>
    <string name="action_show_unused_data">Unused photos</string>
    <string name="nav_other">Other</string>
</resources>