<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_received_items"
            android:icon="@drawable/baseline_details_black_48"
            android:title="@string/nav_received_items" />
        <item
            android:id="@+id/nav_profile_settings"
            android:icon="@drawable/baseline_settings_black_48"
            android:title="@string/nav_profile_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_black_48"
            android:title="@string/nav_about" />
    </group>

    <item android:title="@string/nav_documents">
        <menu>
            <item
                android:id="@+id/nav_terms_of_use"
                android:title="@string/nav_terms_of_use" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_unused_photo"
                android:title="@string/action_show_unused_data" />
        </menu>
    </item>
</menu>
