<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/no_internet_general"
        android:visibility="gone"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_wish"
                    android:text="@string/received_detail_wish"/>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_event"
                    android:text="@string/received_detail_event"/>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_thought"
                    android:text="@string/received_detail_thought"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ll_received_details_layout"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ll_received_details_sorting">

                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sorted_by"
                        android:textStyle="bold"/>

                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_received_details_sorted_by_value"
                        android:text="@string/sorted_by_default"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="@color/colorAccent"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rv_received_details"/>

                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/header_text_size"
                        android:textStyle="bold|italic"
                        android:id="@+id/tv_received_details_no_result"
                        android:text="@string/received_details_no_result_alert"
                        android:visibility="gone"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:id="@+id/pb_received_details"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_received_details_no_selection"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:textSize="@dimen/header_text_size"
            android:text="@string/received_details_no_selection_alert"
            android:visibility="gone"/>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>