<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/widget_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/small_distance"
        android:background="@drawable/widget_header_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:contentDescription="@string/widget_logo_content_description"/>

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/nav_drawer_user_name_text_size"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/received_details_widget_label"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/AppTheme"
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty_view_text"
            android:textStyle="bold"
            android:layout_margin="@dimen/small_distance"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv_widget"/>

    </FrameLayout>

</LinearLayout>
