<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/no_internet_general"
        android:visibility="gone"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="@dimen/activity_horizontal_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_photo_height"
                    android:id="@+id/iv_settings_user_photo"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/baseline_face_black_48"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/settings_photo_content_description"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:background="@color/colorAccent"
                    android:id="@+id/divider_view"
                    android:layout_below="@id/iv_settings_user_photo"
                    android:layout_marginTop="@dimen/divider_margin"
                    android:layout_marginBottom="@dimen/divider_margin"/>

                <LinearLayout
                    android:id="@+id/ll_settings_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/distance"
                    android:layout_below="@+id/divider_view">
                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/settings_display_name_header"
                        android:textSize="@dimen/header_text_size"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_displayed_name"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_displayed_name_change"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:text="@string/settings_change_btn"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_settings_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/distance"
                    android:layout_below="@+id/ll_settings_display_name">
                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/settings_birthday_header"
                        android:textSize="@dimen/header_text_size"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_birthday"
                            android:text="@string/settings_birthday_default"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_birthday_change"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:text="@string/settings_change_btn"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_settings_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/distance"
                    android:layout_below="@+id/ll_settings_birthday">
                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/settings_gender_header"
                        android:textSize="@dimen/header_text_size"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_settings_gender" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/ll_settings_gender">
                    <TextView
                        style="@style/AppTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/settings_verification_header"
                        android:textSize="@dimen/header_text_size"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_verification"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_settings_verification_change"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:text="@string/settings_verification_btn"/>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_user_photo_add_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            app:srcCompat="@drawable/baseline_add_photo_alternate_black_48"
            android:layout_margin="@dimen/fab_margin"
            app:borderWidth="0dp"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="@dimen/fab_press_translation_z"
            android:contentDescription="@string/fab_content_description_gallery"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_user_photo_add_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            app:srcCompat="@drawable/baseline_add_a_photo_black_48"
            android:layout_margin="@dimen/fab_margin"
            app:borderWidth="0dp"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="@dimen/fab_press_translation_z"
            android:contentDescription="@string/fab_content_description_camera"/>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
