<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_wish_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_wish_sorting">

            <TextView
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorted_by"
                android:textStyle="bold"/>

            <TextView
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wish_sorted_by_value"
                android:text="@string/sorted_by_default"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:layout_marginBottom="@dimen/small_distance"
            android:background="@color/colorAccent"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_wish"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:id="@+id/pb_wish"
        android:visibility="gone"/>

    <TextView
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_wish_no_data"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"
        android:text="@string/wish_no_data"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
